# kvcheetah

./: .gitignore  CREDITS.txt  LICENSE  MANIFEST.in  README.md  Todo.txt  build_wheel.sh  setup.cfg  setup.py  test-wheel.sh  test_wheel.sh  upload_package.sh
.github/workflows/: build_macos_wheels.yml  build_source_package.yml  build_ubuntu_wheels.yml  build_windows_wheels.yml
android/: build-apk.sh  install-apk.sh  logcat.sh  main.py  test-apk.sh
kvcheetah/: __init__.py  __main__.py  kvcheetah.kv  matrix.pyx  sprite.py  tilemap.py  vector.pyx
kvcheetah/data/: __init__.py
kvcheetah/data/images/: sprites.atlas  tiles.atlas
kvcheetah/graphics/: __init__.py  sprite.c  tilemap.c
kvcheetah/graphics/opengl/: __init__.py  _gl.c  _gl.pxd  _gl.pyx  _gl_glx.c  _gl_glx.pyx  _gl_sdl2.c  _gl_sdl2.pyx
kvcheetah/math/: __init__.py  matrix.c  matrix.pyx  vector.c  vector.pyx
kvcheetah/uix/: __init__.py  joystick.c  joystick.py
recipes/kvcheetah/: __init__.py
