[metadata]
name = kvcheetah
version = 1.1.3
author = Eric Snyder
author_email = cybermals.group@gmail.com
description = A lightweight game engine based on Kivy.
url = https://github.com/Cybermals/kvcheetah
license = MIT
platforms = 
    Linux
    Windows
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: Games/Entertainment
    Topic :: Multimedia :: Graphics

[options]
packages = kvcheetah
install_requires = 
    kivy
include_package_data = True
