[metadata]
name = kvcheetah
version = 2.0.0
author = Eric Snyder
author_email = cybermals.group@gmail.com
description = A lightweight game engine based on Kivy.
url = https://github.com/Cybermals/kvcheetah
license = MIT
platforms = 
    macosx_10_15_x86_64
    manylinux1_x86_64
    win_amd64
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Android
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: Games/Entertainment
    Topic :: Multimedia :: Graphics

[options]
packages = kvcheetah.data
py_modules = 
    kvcheetah.__init__
    kvcheetah.__main__
    kvcheetah.graphics.__init__
    kvcheetah.graphics.opengl.__init__
    kvcheetah.math.__init__
    kvcheetah.uix.__init__
install_requires = 
    kivy
include_package_data = True
